       issue #423 for details. (Stefan)
- NEW: The log dialog allows filtering by bug-ID.
       See issue #422 for details. (Stefan)
- NEW: Column to show the remote revision in the CfM dialog. (Stefan)
- NEW: The current revision of the working copy item is shown in
       bold in the log dialog. See issue #425 for details. (Stefan)
- CHG: The bug-ID column width in the log dialog is now limited 
       to 200 pixels. (Stefan)
- CHG: The right-drag context menu now only shows "Export" if a versioned
       folder is dragged (for files, the windows 'copy' does the same). (Stefan)
- CHG: The right-drag context menu checks whether source and target are
       from the same repository and shows the "SVN move" and "SVN copy"
       commands only if they are. (Stefan)
- CHG: When only files are selected for "Add", the Add-dialog is not
       shown anymore but the files are added immediately. (Stefan)
- CHG: file:// access to BDB based repositories is no longer supported. (Stefan)
- CHG: the log dialog now shows a possible error message when fetching the
       log as a text in the top list control instead of showing a popup
       message box. (Stefan)

Version 1.5.4
- BUG: Applying a patch where a context line had UTF-BOMs 
       in it failed. (Stefan)
- BUG: Checking out multiple folders from the repository browser failed
       to unescape the target folder. (Stefan)
- BUG: If an url had special chars which needed escaping below the 
       repository root, showing the log did not always work. (Stefan)
- BUG: Comparing two revisions sometimes did not work if the url didn't
       exist anymore in HEAD. (Stefan)
- BUG: Diffing/Blaming from TortoiseBlame on merged revisions did not
       work in certain situations. (Stefan)
- BUG: Unescape the target paths when exporting the changed files from
       the file diff dialog. (Stefan)
- BUG: the 'unversioned' overlay for folders didn't show up for some
       unversioned folders. (Stefan)